<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.ChangePasswordActivity">

    <EditText
        android:id="@+id/tv_screen_recover_password"
        style="@style/MaterialTextViewTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="18dp"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_fill_address" />

    <ImageView
        android:id="@+id/images_recover_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:src="@drawable/ic_recover_password"
        app:layout_constraintBottom_toTopOf="@+id/title_reciver_password_change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mt_toolbar_change_password" />

    <TextView
        android:id="@+id/guidance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand_regular"
        android:text="@string/tv_title_guidance_chage_password"
        android:textAlignment="center"
        android:textColor="@color/colorNameTextView"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_reciver_password_change"
        tools:text="Enviaremos um e-mail de recuperação para o seu e-mail ex****@email.com" />


    <TextView
        android:id="@+id/tv_title_fill_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand_regular"
        android:text="@string/tv_title_fill_address_change_data"
        android:textColor="@color/colorNameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidance" />


    <TextView
        android:id="@+id/tv_title_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/quicksand_regular"
        android:text="@string/tv_title_email_change"
        app:layout_constraintBottom_toTopOf="@id/tv_screen_recover_password"
        app:layout_constraintStart_toStartOf="@id/tv_screen_recover_password" />


    <TextView
        android:id="@+id/title_reciver_password_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/title_reciver_password_change"
        android:textColor="@color/colorNameTextView"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guidance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/images_recover_password" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mt_toolbar_change_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title_toolbar_chagen_password"
        app:titleTextAppearance="@style/MaterialToolbarMenuStyleThemescreens"
        app:titleTextColor="@color/color_toolbar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/input_change_password"
        style="@style/MaterialButtonTheme"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_input_change"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_screen_recover_password"
        app:layout_constraintVertical_bias="0.11" />

</androidx.constraintlayout.widget.ConstraintLayout>